fix: resolve monitoring and ingress configuration issues
- Configure Prometheus with --web.external-url for proper Ingress routing
- Configure Grafana with GF_SERVER_ROOT_URL and subpath support
- Fix backend metrics endpoint Promise handling
- Improve frontend error handling and API response processing
- Update Docker build processes for better compatibility
- Correct MySQL environment variables and initialization
- Optimize Ingress routing rules for all services
- Enhance setup and deployment automation scripts
- Update documentation with recent fixes and improvements

All services now accessible via Ingress:
- Frontend: http://k8s-demo.local/
- Backend: http://k8s-demo.local/api/users
- Prometheus: http://k8s-demo.local/prometheus/
- Grafana: http://k8s-demo.local/grafana/

--- a/docker/Dockerfile.backend
+++ b/docker/Dockerfile.backend
@@ -8,7 +8,7 @@ WORKDIR /app
 COPY apps/backend/package*.json ./
 
 # Install dependencies
-RUN npm ci --only=production
+RUN npm install --only=production
 
 # Copy source code
 COPY apps/backend/ ./
