--- a/k8s-manifests/monitoring/prometheus-deployment.yaml
+++ b/k8s-manifests/monitoring/prometheus-deployment.yaml
@@ -27,6 +27,7 @@ spec:
           - '--web.console.templates=/etc/prometheus/consoles'
           - '--storage.tsdb.retention.time=200h'
           - '--web.enable-lifecycle'
+          - '--web.external-url=http://k8s-demo.local/prometheus/'
         volumeMounts:
         - name: prometheus-config-volume
           mountPath: /etc/prometheus/
