--- a/docker/Dockerfile.frontend
+++ b/docker/Dockerfile.frontend
@@ -1,5 +1,5 @@
 # Multi-stage build for React frontend
-FROM node:18-alpine as build
+FROM node:18-alpine AS build
 
 # Set working directory
 WORKDIR /app
@@ -8,7 +8,7 @@ WORKDIR /app
 COPY apps/frontend/package*.json ./
 
 # Install dependencies
-RUN npm ci --only=production
+RUN npm install --only=production
 
 # Copy source code
 COPY apps/frontend/src ./src
