--- a/k8s-manifests/backend/deployment.yaml
+++ b/k8s-manifests/backend/deployment.yaml
@@ -18,6 +18,7 @@ spec:
       containers:
       - name: backend
         image: k8s-demo/backend:latest
+        imagePullPolicy: Never
         ports:
         - containerPort: 3000
         env:
