feat: implement HPA auto-scaling with monitoring
- Add HPA (Horizontal Pod Autoscaler) for backend and frontend deployments
- Configure Metrics Server for resource-based auto-scaling
- Add kube-state-metrics for HPA metrics collection
- Update Prometheus configuration to collect HPA metrics
- Create HPA metrics dashboard for Grafana
- Add load testing script with HTTP and CPU stress generation
- Add stop load test script for cleanup
- Update Prometheus deployment with route-prefix fix
- Add comprehensive setup documentation
- Implement resource requests for proper HPA functionality
- Test and validate auto-scaling behavior (2-10 backend, 2-8 frontend replicas)
- Clean up project removing non-working dashboard scripts

--- a/k8s-manifests/monitoring/prometheus-configmap.yaml
+++ b/k8s-manifests/monitoring/prometheus-configmap.yaml
@@ -18,6 +18,35 @@ data:
         static_configs:
           - targets: ['localhost:9090']
 
+      - job_name: 'kubernetes-apiservers'
+        kubernetes_sd_configs:
+          - role: endpoints
+        scheme: https
+        tls_config:
+          ca_file: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
+        bearer_token_file: /var/run/secrets/kubernetes.io/serviceaccount/token
+        relabel_configs:
+          - source_labels: [__meta_kubernetes_namespace, __meta_kubernetes_service_name, __meta_kubernetes_endpoint_port_name]
+            action: keep
+            regex: default;kubernetes;https
+
+      - job_name: 'kubernetes-nodes'
+        kubernetes_sd_configs:
+          - role: node
+        scheme: https
+        tls_config:
+          ca_file: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
+        bearer_token_file: /var/run/secrets/kubernetes.io/serviceaccount/token
+        relabel_configs:
+          - action: labelmap
+            regex: __meta_kubernetes_node_label_(.+)
+          - target_label: __address__
+            replacement: kubernetes.default.svc:443
+          - source_labels: [__meta_kubernetes_node_name]
+            regex: (.+)
+            target_label: __metrics_path__
+            replacement: /api/v1/nodes/${1}/proxy/metrics
+
       - job_name: 'kubernetes-pods'
         kubernetes_sd_configs:
           - role: pod
@@ -48,3 +77,10 @@ data:
           - targets: ['backend:3000']
         metrics_path: '/metrics'
         scrape_interval: 15s
+
+      - job_name: 'kube-state-metrics'
+        static_configs:
+          - targets: ['kube-state-metrics.kube-system.svc.cluster.local:8080']
+        scrape_interval: 15s
+        metrics_path: '/metrics'
+
