--- a/docker/Dockerfile.frontend
+++ b/docker/Dockerfile.frontend
@@ -23,8 +23,15 @@ FROM nginx:alpine
 # Copy built application from build stage
 COPY --from=build /app/build /usr/share/nginx/html
 
-# Copy custom nginx configuration
-COPY docker/nginx.conf /etc/nginx/nginx.conf
+# Copy nginx template and startup script
+COPY docker/nginx-template.conf /etc/nginx/nginx-template.conf
+COPY docker/start-nginx.sh /start-nginx.sh
+
+# Make startup script executable
+RUN chmod +x /start-nginx.sh
+
+# Install envsubst
+RUN apk add --no-cache gettext
 
 # Expose port 80
 EXPOSE 80
@@ -33,5 +40,5 @@ EXPOSE 80
 HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
   CMD curl -f http://localhost/ || exit 1
 
-# Start nginx
-CMD ["nginx", "-g", "daemon off;"]
+# Start nginx with environment variable substitution
+CMD ["/start-nginx.sh"]
