--- a/docker/nginx-template.conf
+++ b/docker/nginx-template.conf
@@ -53,7 +53,7 @@ http {
 
             # Proxy API requests to backend
             location /api/ {
-                proxy_pass http://backend.k8s-demo.svc.cluster.local:3000;
+                proxy_pass http://${BACKEND_SERVICE_HOST}:${BACKEND_SERVICE_PORT};
                 proxy_set_header Host $host;
                 proxy_set_header X-Real-IP $remote_addr;
                 proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
