--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -19,7 +19,8 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.20",
-    "jest": "^29.3.1"
+    "jest": "^29.3.1",
+    "supertest": "^6.3.3"
   },
   "keywords": [
     "kubernetes",
