fix: update repository names in values files
- Update values-dev.yaml with correct repository: ghcr.io/murilovetter/k8s
- Update values-staging.yaml with correct repository: ghcr.io/murilovetter/k8s
- Ready for CI/CD pipeline testing

--- a/values-dev.yaml
+++ b/values-dev.yaml
@@ -7,13 +7,13 @@ global:
 # Frontend configuration
 frontend:
   image:
-    repository: ghcr.io/murilo/k8s/frontend
+    repository: ghcr.io/murilovetter/k8s/frontend
     tag: latest
 
 # Backend configuration - override database connection
 backend:
   image:
-    repository: ghcr.io/murilo/k8s/backend
+    repository: ghcr.io/murilovetter/k8s/backend
     tag: latest
   env:
     MYSQL_HOST: k8s-demo-dev-mariadb
